--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ISEN Smart Companion</string>
+    <string name="isen_logo">ISEN Logo</string>
+    <string name="send_logo">Send Logo</string>
 </resources>
