--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ISEN Smart Companion</string>
     <string name="isen_logo">ISEN Logo</string>
     <string name="send_logo">Send Logo</string>
+    <string name="title_activity_event_detail">EventDetailActivity</string>
 </resources>
